[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9.0,<3.11.0"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
aiohttp = "^3.8.3"
python-telegram-bot = {version = "^20.0b0", allow-prereleases = true}
pytz = "^2022.7"
pytest = "^7.2.0"
pytest-asyncio = "^0.20.3"
python-dotenv = "^0.21.0"
pyee = "^9.0.4"
redis = "^4.4.0"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[tool.poetry.extras]
redis = ["hiredis"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -v -s"
testpaths = [
    "tests"
]