[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11.0"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
aiohttp = "^3.8.3"
pytz = "^2022.7"
python-dotenv = "^0.21.0"
pyee = "^9.0.4"
redis = "^4.4.0"
python-telegram-bot = {version = "20.3", allow-prereleases = true}
market-data-library = {git = "ssh://git@github.com/hanchiang/market_data_api.git", rev = "0.16.10"}

[tool.poetry.extras]
redis = ["hiredis"]

[tool.poetry.group.dev.dependencies]
coverage = "^7.2.6"
pytest = "^7.2.0"
pytest-asyncio = "^0.20.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -v -s"
testpaths = [
    "tests"
]
